--- a/ex436/Vagrantfile
+++ b/ex436/Vagrantfile
@@ -2,9 +2,10 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "centos/7"
-  config.vm.box_check_update = false
-  config.vm.provision "shell", path: "bootstrap-hosts.sh"
+  config.vm.box = "centos/7"                                        # Use Centos 7 for exam preparations
+  config.vm.synced_folder "/etc/cluster", "/etc/cluster",           # Syncronize XVM keys
+  config.vm.box_check_update = false                                # Don't update boxes
+  config.vm.provision "shell", path: "bootstrap-hosts.sh"           # Simple bash bootstrap script
 
   # Define hosta
   config.vm.define :hosta do |hosta_config|
@@ -16,7 +17,7 @@ Vagrant.configure("2") do |config|
     hosta_config.vm.host_name = 'hosta.example.com'
     hosta_config.vm.network "private_network", ip: "192.168.50.10"
   end
-  
+
   # Define hostb
   config.vm.define :hostb do |hostb_config|
     hostb_config.vm.box = "centos/7"
